--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-terminal "screen-256color"
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
@@ -20,5 +21,5 @@ bind -n M-Up select-pane -U
 set -g status-right ' #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
 set -g @plugin 'tmux-plugins/tmux-battery'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 run '~/.tmux/plugins/tpm/tpm'
-
