--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,12 @@ bind -n M-Right select-pane -R
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
 
+set -g status-right-length 160
+set -g status-right '#(tmux-spotify-info) | #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
 
-set -g status-right ' #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
 set -g @plugin 'tmux-plugins/tmux-battery'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 run '~/.tmux/plugins/tpm/tpm'
+
+
