--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,12 +17,10 @@ bind -n M-Right select-pane -R
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
 
-set -g status-right-length 160
-set -g status-right '#(tmux-spotify-info) | #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
 
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+#------------tpm
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+
+set -g @plugin 'seebi/tmux-colors-solarized'
+
 run '~/.tmux/plugins/tpm/tpm'
-
-
