--- a/tmux.conf
+++ b/tmux.conf
@@ -22,5 +22,9 @@ bind -n M-Up select-pane -U
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 
 set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-processes 'ssh psql pgcl yes'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -sg escape-time 0
