--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 
 #------------tpm
@@ -24,6 +25,8 @@ bind -n M-Up select-pane -U
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-processes 'ssh psql pgcl yes'
+
+set -g @colors-solarized 'dark'
 
 run '~/.tmux/plugins/tpm/tpm'
 
